Bug 462437 - non english characters works wrong with "e" motion
Summary: non english characters works wrong with "e" motion
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (other bugs)
Version First Reported In: 22.04.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-30 12:42 UTC by sotero
Modified: 2024-02-18 20:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sotero 2022-11-30 12:42:18 UTC
SUMMARY
Vi command for motion "e" (To end of word) works wrong with "non english" characters; I have tested czech letters (éíá...) and german letter ü.


STEPS TO REPRODUCE
1. word containing "non english" characters eg. "nahrávání"
2. put cursor at the beginning of the word
3. in Vi Normal mode type "e" (motion command To end of word)

OBSERVED RESULT
Cursor jumps to letter "r"

EXPECTED RESULT
Cursor should jump to the end of the word (the letter "í")

SOFTWARE/OS VERSIONS
Xubuntu 22.04 LTS (with ppa:kubuntu-ppa/backports)
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.3 (built against 5.15.3)
Comment 1 Christoph Cullmann 2024-02-18 20:16:46 UTC
True, seems to be borked.
Comment 2 Christoph Cullmann 2024-02-18 20:39:44 UTC
Git commit bf08a9a6faf35ca2f6c69a9f64b545e0e7129436 by Christoph Cullmann.
Committed on 18/02/2024 at 20:39.
Pushed by cullmann into branch 'master'.

ensure we support unicode in patterns

porting errors from QRegExp

M  +2    -2    autotests/src/vimode/base.cpp
M  +4    -0    autotests/src/vimode/keys.cpp
M  +1    -1    src/vimode/commandrangeexpressionparser.cpp
M  +2    -2    src/vimode/modes/modebase.cpp
M  +2    -2    src/vimode/modes/normalvimode.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/bf08a9a6faf35ca2f6c69a9f64b545e0e7129436