ensure we support unicode in patterns

porting errors from QRegExp

BUG: 462437